@@ -1233,3 +1233,4 @@ status_town_title_peaceful: '&b(Peaceful)'
 #Added in 0.95
 status_public: '&b(Public)'
 msg_days: ' days'
+msg_comptype_public: 'Public Status'
