@@ -15,6 +15,7 @@ public enum PermissionNodes {
 	    TOWNY_COMMAND_NATION_LIST_RESIDENTS("towny.command.nation.list.residents"),
 	    TOWNY_COMMAND_NATION_LIST_TOWNS("towny.command.nation.list.towns"),
 	    TOWNY_COMMAND_NATION_LIST_OPEN("towny.command.nation.list.open"),
+	    TOWNY_COMMAND_NATION_LIST_PUBLIC("towny.command.nation.list.public"),
 	    TOWNY_COMMAND_NATION_LIST_BALANCE("towny.command.nation.list.balance"),
 	    TOWNY_COMMAND_NATION_LIST_NAME("towny.command.nation.list.name"),
 	    TOWNY_COMMAND_NATION_LIST_TOWNBLOCKS("towny.command.nation.list.townblocks"),
@@ -94,6 +95,7 @@ public enum PermissionNodes {
 		TOWNY_COMMAND_TOWN_LIST("towny.command.town.list.*"),
 		    TOWNY_COMMAND_TOWN_LIST_RESIDENTS("towny.command.town.list.residents"),
 		    TOWNY_COMMAND_TOWN_LIST_OPEN("towny.command.town.list.open"),
+		    TOWNY_COMMAND_TOWN_LIST_PUBLIC("towny.command.town.list.public"),
 		    TOWNY_COMMAND_TOWN_LIST_BALANCE("towny.command.town.list.balance"),
 		    TOWNY_COMMAND_TOWN_LIST_NAME("towny.command.town.list.name"),
 		    TOWNY_COMMAND_TOWN_LIST_TOWNBLOCKS("towny.command.town.list.townblocks"),
